--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nanoProject</groupId>
-    <artifactId>nano-record-getter</artifactId>
+    <artifactId>nano-lambda-timestamp-getter</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>lambda-java</name>
